--- a/src/sass/partials/_layout.scss
+++ b/src/sass/partials/_layout.scss
@@ -3,7 +3,6 @@
     height: 100vh;
     width: 100vw;
 
-
     //// MAIN GRID ////
     display: grid;
     grid-template-rows: 4rem 95vh 80rem 60rem 10rem;
@@ -15,7 +14,6 @@
     grid-column: 1 / 9;
     grid-row: 1 / 3;
     justify-items: center;
-
 
     margin-top: -6vh;
 
@@ -35,10 +33,10 @@
     grid-column: 1 / 9;
     grid-row: 4 / 5;
     position: relative;
-    overflow-y: scroll;
 
 
-    margin-top: -40rem;
+
+    margin-top: -45rem;
     // Reverse background image
     transform: rotate(180deg);
     background-image: url('../static/bg--secondary.svg');
