--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -96,8 +96,7 @@ App {
   grid-column: 1 / 9;
   grid-row: 4 / 5;
   position: relative;
-  overflow-y: scroll;
-  margin-top: -40rem;
+  margin-top: -45rem;
   transform: rotate(180deg);
   background-image: url("../static/bg--secondary.svg");
   background-size: contain;
@@ -235,7 +234,8 @@ App {
 
 @keyframes fly-right-one {
   0% {
-    transform: scale(0.3) translateX(-10vw); }
+    transform: scale(0.3) translateX(-10vw);
+    visibility: visible; }
   10% {
     transform: translateY(2vh) translateX(10vw) scale(0.4); }
   20% {
@@ -251,10 +251,10 @@ App {
     opacity: 1;
     visibility: visible; }
   61% {
-    opacity: 0;
+    transform: translateY(0vh) translateX(100vw) scale(0.6);
     visibility: hidden; }
   100% {
-    opacity: 0;
+    transform: translateY(0vh) translateX(100vw) scale(0.6);
     visibility: hidden; } }
 
 .card {
@@ -589,20 +589,23 @@ App {
 
 .project__container {
   border-radius: .2rem;
-  height: 100rem;
+  height: 80rem;
   width: 95vw;
-  margin-top: 10rem;
+  margin-top: 0rem;
   padding-top: 5rem;
   background: rgba(255, 255, 255, 0.152);
   color: white;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center; }
   @supports (clip-path: polygon(0 0)) or (-webkit-clip-path: polygon(0 0)) {
     .project__container {
       -webkit-clip-path: polygon(0 10rem, 100% 0, 100% 100%, 0 100%);
       clip-path: polygon(0 10rem, 100% 0, 100% 100%, 0 100%); } }
+  @media only screen and (min-width: 50em) {
+    .project__container {
+      height: 73rem; } }
 
 .project__header {
   text-transform: uppercase;
@@ -613,7 +616,7 @@ App {
   width: 100%; }
 
 .project__card-container {
-  height: 100%;
+  height: 75%;
   width: 94%;
   padding-bottom: 18rem;
   padding-top: 2rem;
@@ -630,6 +633,7 @@ App {
       grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr)); } }
   @media only screen and (min-width: 50em) {
     .project__card-container {
+      padding-bottom: 4rem;
       grid-template-columns: repeat(auto-fit, minmax(19rem, 1fr)); } }
 
 .project__card {
